--- a/sass/_animations.scss
+++ b/sass/_animations.scss
@@ -26,22 +26,22 @@
     1% {
         opacity: 100%;
     }
-    2% {
-        opacity: 0;
-    }
-    3% {
-        opacity: 100%;
-    }
     4% {
         opacity: 0;
     }
-    5% {
+    6% {
         opacity: 100%;
     }
-    6% {
+    8% {
         opacity: 0;
     }
-    14% {
+    10% {
+        opacity: 100%;
+    }
+    12% {
+        opacity: 0;
+    }
+    24% {
         opacity: 100%;
     }
 }
